<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healthious</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">Healthious</string>
    <string name="bmi_label">Calculate your BMI</string>
    <string name="bmi_current_label">Your current BMI is:</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="birthdate_label">Birthdate</string>
    <string name="change_date">Set date</string>
    <string name="weighin_label">Set your weight</string>
    <string name="weigh_in">Weigh in</string>
    <string name="week">Week</string>
    <string name="weight">Weight</string>
    <string name="your_last_weigh_in">Your last weigh in</string>
    <string name="your_progress">Your progress</string>
    <string name="see_your_progress">See your progress</string>
    <string name="health_tips">Health tips</string>
    <string name="check_tips">Check tips</string>
    <string name="health_prices">Health Prices</string>
    <string name="check_prices">Check prices</string>
    <string name="health_map">Health map</string>
    <string name="show_map">Show map</string>
    <string name="not_set">not set..</string>
    <string name="height">Height</string>
    <string name="your_bmi_is">Your BMI is:</string>
    <string name="target_weight">Target weight:</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="alert">Alert</string>
    <string name="ok">ok</string>
    <string name="weight_not_properly_set">Weight not properly set</string>
    <string name="errors">Errors</string>
    <string name="height_not_properly_set">Height not properly set</string>
    <string name="label_kgr">%s kgr</string>
    <string name="kgr">kgr</string>
    <string name="label_centimeters">cm</string>
    <string name="classification">Classification:</string>
    <string name="bmi_saved">Your saved BMI:</string>
    <string name="select_week">Select week:</string>
    <string name="save_measurement">Save Measurement</string>
    <string name="cancel">cancel</string>
    <string name="no_week_or_weight">No week or weight set</string>
    <string name="save_question">Save?</string>
    <string name="all_measurements">All measurements:</string>

    <string-array name="action_list">
        <item>Home</item>
        <item>BMI</item>
        <item>Progress</item>
        <item>Health tips</item>
        <item>Health prices</item>
        <item>Health map</item>
    </string-array>

    <string name="title_activity_chart">My weights</string>
    <string name="label_target_weight">Target Weight</string>
    <string name="label_current_weight">Current weight</string>
    <string name="title_activity_prices_list">Prices</string>
    <string name="title_activity_tips_list">Health Tips</string>

</resources>
