<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bmiButtonWeight"
                style="@style/nav_no_spacer"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/bmiWeightTextView"
                style="@style/labelHeader"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            style="@style/spacer"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bmiButtonHeight"
                style="@style/nav_no_spacer"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad"
                android:text="@string/height" />

            <TextView
                android:id="@+id/bmiHeightTextView"
                style="@style/labelHeader"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_set" />
        </LinearLayout>

        <RadioGroup android:id="@+id/genderGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_spacer"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/femaleRadioButton"
                style="@style/RadioButton"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_male"/>
            <RadioButton android:id="@+id/maleRadioButton"
                style="@style/RadioButton"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/label_female"/>
        </RadioGroup>

        <Button
            android:id="@+id/calculateBmiButton"
            style="@style/nav"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_bmi" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            style="@style/spacer"
            android:layout_height="wrap_content">
            <TextView
                style="@style/labelHeaderMediumGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad"
                android:text="@string/your_bmi_is" />

            <TextView
                android:id="@+id/bmiTextView"
                style="@style/labelHeaderMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            style="@style/spacer"
            android:layout_height="wrap_content">
            <TextView
                style="@style/labelHeaderMediumGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad"
                android:text="@string/target_weight" />

            <TextView
                android:id="@+id/targetWeightTextView"
                style="@style/labelHeaderMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            style="@style/spacer"
            android:layout_height="wrap_content">
            <TextView
                style="@style/labelHeaderMediumGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad"
                android:text="@string/classification" />

            <TextView
                android:id="@+id/classificationTextView"
                style="@style/labelHeaderMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>